[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "http-mptcp"
version = "1.0.0"
authors = [
  { name="Dourov Maxime", email="mux99@live.be" },
]
description = "a MPTCP extension for the http library"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["MPTCP", "multipath", "tcp", "http", "https"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = ""
Issues = ""

[tool.hatch.build.targets.wheel]
packages = ["src/client", "src/server"]